--- a/css/style.css
+++ b/css/style.css
@@ -307,7 +307,7 @@ section {
 	margin-top: 120px;
 }
 .footerheading {
-	font-family: Lexend Deca;
+	font-family: Helvetica;
 	height: 20px;
 	font-size: 18pt;
 	color: #ff0000;
